--- a/frontend/src/main/resources/application.yml
+++ b/frontend/src/main/resources/application.yml
@@ -15,3 +15,7 @@ hystrix:
                thread:
                   timeoutInMilliseconds: 30000
 
+eureka:
+  client:
+    serviceUrl:
+        defaultZone: http://eureka-server-microservice:8761/eureka/
