--- a/frontend/src/main/resources/application.yml
+++ b/frontend/src/main/resources/application.yml
@@ -19,3 +19,10 @@ eureka:
   client:
     serviceUrl:
         defaultZone: http://eureka-server-microservice:8761/eureka/
+
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 120000
+        readTimeout: 120000
