--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -27,6 +27,12 @@
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+			<version>3.0.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-sleuth-dependencies</artifactId>
 			<version>3.0.3</version>
 			<type>pom</type>
