--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -20,6 +20,12 @@
 	</properties>
 	<dependencies>
 
+	<!-- <dependency>
+		<groupId>io.github.openfeign</groupId>
+		<artifactId>feign-slf4j</artifactId>
+		<version>9.3.1</version>
+	</dependency>
+ -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
