--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -20,12 +20,8 @@
 	</properties>
 	<dependencies>
 
-	<!-- <dependency>
-		<groupId>io.github.openfeign</groupId>
-		<artifactId>feign-slf4j</artifactId>
-		<version>9.3.1</version>
-	</dependency>
- -->
+		<!-- <dependency> <groupId>io.github.openfeign</groupId> <artifactId>feign-slf4j</artifactId> 
+			<version>9.3.1</version> </dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -46,6 +42,8 @@
 			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
 		</dependency>
 
+	<!-- <dependency> <groupId>org.springframework.cloud</groupId> <artifactId>spring-cloud-starter-netflix-hystrix</artifactId> 
+		</dependency> -->
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
