--- a/frontend/src/main/resources/application.properties
+++ b/frontend/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 hystrix:
 command.default.execution.timeout.enabled: false
 command.default.execution.isolation.thread.timeoutInMilliseconds: 500000000
+
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.username=admin
+spring.activemq.password=admin
+spring.activemq.packages.trust-all=true
+
+log4j.logger.org.apache.activemq=INFO
+log4j.logger.org.apache.activemq.spring=WARN
+
+-Dorg.apache.activemq.SERIALIZABLE_PACKAGES="*"
