--- a/frontend/src/main/resources/application.properties
+++ b/frontend/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 hystrix:
 command.default.execution.timeout.enabled: false
-command.default.execution.isolation.thread.timeoutInMilliseconds: 500000000
+command.default.execution.isolation.thread.timeoutInMilliseconds: 6000
 
-
+server.error.include-message=always
 spring.activemq.packages.trust-all=true
 
 log4j.logger.org.apache.activemq=INFO
 log4j.logger.org.apache.activemq.spring=WARN
-
 -Dorg.apache.activemq.SERIALIZABLE_PACKAGES="*"
