--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -45,6 +45,12 @@
 			<artifactId>nimbus-jose-jwt</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>eu.bitwalker</groupId>
+			<artifactId>UserAgentUtils</artifactId>
+			<version>1.19</version>
+		</dependency>
+
 		<!-- <dependency> <groupId>io.github.openfeign</groupId> <artifactId>feign-slf4j</artifactId>
 			<version>9.3.1</version> </dependency> -->
 
