--- a/frontend/src/main/resources/application.properties
+++ b/frontend/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # AWS S3 Configuration
-aws.access_key_id=
-aws.secret_access_key=
-aws.s3.bucket=
-aws.region.static=
+aws.access_key_id=AKIARXSBBHIOIHN5DRNS
+aws.secret_access_key=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
+aws.s3.bucket=eprocurement-data
+aws.region.static=ap-south-1
+Property : spring.servlet.multipart.maxFileSize= 100MB
 
