--- a/frontend/src/main/resources/application.properties
+++ b/frontend/src/main/resources/application.properties
@@ -5,5 +5,5 @@ aws.s3.bucket=eprocurement-data
 aws.region.static=ap-south-1
 Property : spring.servlet.multipart.maxFileSize= 100MB
 
-#feign.client.config.default.connectTimeout=8000
-#feign.client.config.default.readTimeout=8000
+feign.client.config.default.connectTimeout=10000
+feign.client.config.default.readTimeout=10000
