--- a/frontend/src/main/resources/application.properties
+++ b/frontend/src/main/resources/application.properties
@@ -7,3 +7,11 @@ Property : spring.servlet.multipart.maxFileSize= 100MB
 
 feign.client.config.default.connectTimeout=10000
 feign.client.config.default.readTimeout=10000
+
+# Elastic Cloud Configuration
+elasticsearch.cluster-name=book-cluster
+elasticsearch.cluster-nodes=book-cluster.kb.asia-south1.gcp.elastic-cloud.com:9243
+
+# Json pretty or formating
+spring.jackson.serialization.indent_output=true
+org.springframework.data.elasticsearch.client.WIRE = trace
