chg in pom file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ elasticsearch.cluster-nodes=book-cluster.kb.asia-south1.gcp.elastic-cloud.com:92
 # Json pretty or formating
 spring.jackson.serialization.indent_output=true
 org.springframework.data.elasticsearch.client.WIRE = trace
+spring.main.lazy-initialization=true
